namespace KitchenManagement.ConsoleApp.Enums;

public enum DishCategory
{
    Food = 1,
    Drink = 2
}
