namespace KitchenManagement.ConsoleApp.Enums;

public enum OrderStatus
{
    Pending = 1,
    Preparing = 2,
    Ready = 3
}
